--- a/named-servant.cabal
+++ b/named-servant.cabal
@@ -1,12 +1,13 @@
 cabal-version: 1.12
 name: named-servant
-description: support named parameters in servant using the named package
-version: 0.2.0
+description: support records and named (from the named package) parameters in servant
+version: 0.3.0
 maintainer: kristof@resonata.be
 copyright: Kristof Bastiaensen 2020
 license: BSD3
 license-file: LICENSE
 build-type: Simple
+Description: Having positional parameters in Servant can be error prone, especially if you have lot of them, and they have similar types.  This package solves that problem by either using records or named parameters (from the named package) to specify servant parameters.  To use with servers, use the /named-servant-server/ package, with clients use /named-servant-client/.
 
 source-repository head
     type: git
